chore: Fix sort in mobile, some alignment

--- a/src/components/pages/homepage/us-map.module.scss
+++ b/src/components/pages/homepage/us-map.module.scss
@@ -9,6 +9,7 @@ $color-text-high: black;
 .map-wrapper {
   position: relative;
   h1 {
+    margin-top: 0;
     text-align: center;
   }
   .map {
@@ -16,11 +17,12 @@ $color-text-high: black;
     @media (min-width: $viewport-lg) {
       display: block;
       margin: 0 auto;
+      margin-top: -50px;
     }
   }
   .map-heading {
     position: relative;
-    @include col(4 4 8);
+    @include col(4 4 9);
     @media (min-width: $viewport-lg) {
       position: absolute;
     }
@@ -153,6 +155,8 @@ $color-text-high: black;
   }
 }
 
+$toggle-button-radius: 4px;
+
 .toggle {
   margin-top: spacer(16);
   margin-bottom: spacer(32);
@@ -160,22 +164,24 @@ $color-text-high: black;
   button {
     border: 0;
     @include type-size(300);
-    @include padding(8);
+    @include padding(8, top bottom);
+    @include padding(16, left right);
     cursor: pointer;
     background: $color-plum-800;
     color: white;
     border-radius: none;
     &:first-child {
-      border-top-left-radius: 3px;
-      border-bottom-left-radius: 3px;
+      border-top-left-radius: $toggle-button-radius;
+      border-bottom-left-radius: $toggle-button-radius;
     }
     &:last-child {
-      border-top-right-radius: 3px;
-      border-bottom-right-radius: 3px;
+      border-top-right-radius: $toggle-button-radius;
+      border-bottom-right-radius: $toggle-button-radius;
     }
     &[data-active] {
       color: black;
       background: white;
+      border-radius: $toggle-button-radius;
     }
   }
 }
